--- a/q/275590.html
+++ b/q/275590.html
@@ -26,22 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>389</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
+<tr d-ix="0"><td>387</td><td>JavaScript</td><td>240919T161621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275646#275646">Jordan</a></td></tr>
 <tr d-ix="1"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 <tr d-ix="2"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
 <tr d-ix="3"><td>304</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
 <tr d-ix="4"><td>077</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
 <tr d-ix="5"><td>303</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
-<tr d-ix="6"><td>190</td><td>alsautils</td><td>240918T121158Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275608#275608">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript, 389 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript, 387 bytes</h1>
 <p>I don't golf with JavaScript much so I'm sure there's a lot of opportunities for golfing here. Should work on most browsers.</p>
 <pre class="lang-js prettyprint-override"><code>x=&gt;{a=new AudioContext
 o=a.createOscillator()
 d=.19;[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;o.frequency.setValueAtTime(440*2**((s-21)/12),(t*32+j)*d)
 for(i=0,j=0;i&lt;17;i++,j++)p(c[j%4]+12*((i/4)|0))
 for(i=0;i&lt;15;i++,j++)p(c[3-((j-1)%4)]+12*(((15-i)/4)|0))})
-o.connect(g=a.createGain()).connect(a.destination)
+o.connect(a.createGain()).connect(a.destination)
 o.start()
 o.stop(256*d)}
 </code></pre>
@@ -55,10 +54,10 @@ o=a.createOscillator()
 d=.19;[y=[0,2,4,7],z=[-3,-1,0,4],y,z,[-7,-5,-3,0],[-5,-3,-1,2],[-4,0,3,7],[-2,2,5,9]].map((c,t)=&gt;{p=s=&gt;o.frequency.setValueAtTime(440*2**((s-21)/12),(t*32+j)*d)
 for(i=0,j=0;i&lt;17;i++,j++)p(c[j%4]+12*((i/4)|0))
 for(i=0;i&lt;15;i++,j++)p(c[3-((j-1)%4)]+12*(((15-i)/4)|0))})
-o.connect(g=a.createGain()).connect(a.destination)
+o.connect(a.createGain()).connect(a.destination)
 o.start()
 o.stop(256*d)}</code></pre>
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;button type="button" id="play" onclick="f()"&gt;Play (Warning: Loud)&lt;/button&gt;</code></pre>
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;button type="button" onclick="f()"&gt;Play (Warning: Loud)&lt;/button&gt;</code></pre>
 </div>
 </div>
 </p>
@@ -375,28 +374,6 @@ sub s(n):sound n,.18,50:return
 </code></pre>
 <p>The info about chords and octaves in the &quot;music theory&quot; section helped a lot.</p>
 <p><sub><s><a href="https://github.com/roblogic/golf/blob/46d9ed8a30eaa2785bd216b5188800784a5be9eb/basic/275590-play-the-final-fantasy-prelude.bas" rel="nofollow noreferrer">677 bytes</a></s> <em>: I am sure there is a better way of coding this ...</em></sub></p>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/bear24rw/alsa-utils" rel="nofollow noreferrer">alsa-utils</a>, 190 bytes</h1>
-<p>xxd dump:</p>
-<pre><code>00000000: 4d54 6864 0000 0006 0001 0002 00dc 4d54  MThd..........MT
-00000010: 726b 0000 0013 00ff 5103 07a1 2000 ff58  rk......Q... ..X
-00000020: 0404 0218 0801 ff2f 004d 5472 6b00 0000  ......./.MTrk...
-00000030: 8d00 c000 0090 3050 0034 5000 3750 8670  ......0P.4P.7P.p
-00000040: 3000 0034 0000 3700 0039 5000 3d50 0040  0..4..7..9P.=P.@
-00000050: 5086 7030 5000 3450 0037 5000 3900 003d  P.p0P.4P.7P.9..=
-00000060: 0000 4000 8670 3000 0034 0000 3700 0039  ..@..p0..4..7..9
-00000070: 5000 3d50 0040 5086 7035 5000 3900 0039  P.=P.@P.p5P.9..9
-00000080: 5000 3c50 003d 0000 4000 8670 3500 0038  P.&lt;P.=..@..p5..8
-00000090: 5000 3900 003c 0000 3c50 003f 5086 7038  P.9..&lt;..&lt;P.?P.p8
-000000a0: 0000 3a50 003c 0000 3e50 003f 0000 4150  ..:P.&lt;..&gt;P.?..AP
-000000b0: 8670 3a00 003e 0000 4100 01ff 2f00       .p:..&gt;..A.../.
-</code></pre>
-<p>Environment: A modern linux computer, with alsa installed (default in many distributions, though becoming superseded by pipewire), and a midi card installed (could be a USB midi card) available at midi port x.</p>
-<p>to play:
-save code to a file, then</p>
-<pre><code>aplaymidi --port=x.0 &lt;filepath&gt;
-</code></pre>
-<p>as you can probably guess, this is just a straight up midi file I generated with the appropriate notes and tempo.</p>
 </div>
 
 <table id="st">
