--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240920T042322Z
+"   /golfscore                                      20240920T053305Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275640.html">Count the symmetries                            : 0275640</a>
 <a href="q/275590.html">Play the Final Fantasy Prelude                  : 0275590</a>
 <a href="q/263756.html">Calculate the aspect ratio of the Nepal flag    : 0263756</a>
 <a href="q/275596.html">Fractions nobody needs (because they can be redu: 0275596</a>
